# Rules_Project-v2

./: .gitattributes  PIPELINE.md  README.md  SPEC.md  SUMMARY_FA.md  Sample-Test-UI-pb_dashboard_mock.html  pyproject.toml  run_pattern_viewer.bat
Persian Doc/: متن چت بانک دانش.docx
data/: btcusdt_4h_features.parquet  btcusdt_4h_patterns_L2_11.json  btcusdt_4h_patterns_L2_11.parquet  btcusdt_4h_patterns_auto.json  btcusdt_4h_patterns_auto.parquet  btcusdt_4h_patterns_stats.parquet  btcusdt_4h_raw.parquet  pattern_families_4h.parquet  pattern_families_5m.parquet  pattern_graph_4h_edges.parquet  pattern_graph_5m_edges.parquet  pattern_hits_4h_level1.parquet  pattern_hits_5m_level1.parquet  pattern_inventory_families_all.parquet  pattern_inventory_level1_all.parquet  patterns_4h_raw_level1.parquet  patterns_4h_raw_level1_with_embeddings.parquet  patterns_5m_raw_level1.parquet  patterns_5m_raw_level1_with_embeddings.parquet  window_embeddings_5m_level1.parquet
docs/: PrisonBreaker_FullPatternInventory_v2_EN.md  PrisonBreaker_FullPatternInventory_v2_FA.md
kb/: DISCOVERY_METHODS_4H_v1.0_EN.md  DISCOVERY_METHODS_4H_v1.0_FA.md  KB_SCHEMA.yaml  btc_futures_loader.py  btcusdt_4h_knowledge.yaml  rules_4h_patterns.yaml  rules_4h_patterns_performance.yaml
prisonbreaker-ui/: index.html  package.json
project/: DEVELOPMENT_GUIDELINES_FA_EN.md  MASTER_KNOWLEDGE.yaml  pattern_hits_level1.py  repartition_pattern_hits_level1.py  report_full_pattern_inventory_v2.py
scripts/: backtest_4h_rules_simple.py  build_4h_intra_5m_features.py  build_4h_micro_patterns_kb_v2.py  (+18 more)
(+109 files in other folders)
