[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rules-kb"
version = "0.1.0"
description = "Knowledge base loader, validator, and CLI for BTC futures rules."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "requests>=2.31",
    "pandas>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "dash>=2.17,<3.0",
    "plotly>=5.23,<6.0",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
rules-kb = "rules_kb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
